--- a/seng438-a2-10.md
+++ b/seng438-a2-10.md
@@ -36,6 +36,8 @@ Text…
 
 # Detailed description of Unit Test Strategy <a name="par1"></a>
 
+When designing test cases each of the four members created their own partition for the methods they intended to test.
+
   ***Partition One:*** The design strategy used for the *getCentralRange*, *getUpperBound*, and *getLowerBound* methods found in *Range* utilized equivalence class and boundary value testing to determine the test cases to be used. The only required parameter was values x and y, where x is always less than or equal to y, and y is greater than or equal to x. Due to this, the range was partitioned into a minimum and maximum value (the largest value for an integer, both negative and positive), negative numbers, positive numbers, and zero.
 
 Text...
