Updated Lab Report.

--- a/seng438-a2-10.md
+++ b/seng438-a2-10.md
@@ -1,4 +1,3 @@
-
 **SENG 438 - Software Testing, Reliability, and Quality**
 
   
@@ -28,104 +27,169 @@
   
 # Introduction <a name="introduction"></a>
 
-  
+  In this lab session our team managed to develop our own test cases using black box strategies, then used JUnit to perform the test cases themselves.
 
-Text…
+Prior to this lab session, we had very little practical experience with creating our own test cases, and we also had little JUnit experience and more specifically mocking a test case. We overall understood the concepts involved with black box testing such as equivalence class and boundary value testing which helped us develop our test cases. 
 
   
 
 # Detailed description of Unit Test Strategy <a name="par1"></a>
 
-When designing test cases each of the four members created their own partition for the methods they intended to test.
+To begin our design process When designing test cases each of the four members created their own partition for the methods they intended to test, then they were adjusted accordingly after discussion.
 
-  ***Partition One:*** The design strategy used for the *getCentralRange*, *getUpperBound*, and *getLowerBound* methods found in *Range* utilized equivalence class and boundary value testing to determine the test cases to be used. The only required parameter was values x and y, where x is always less than or equal to y, and y is greater than or equal to x. Due to this, the range was partitioned into a minimum and maximum value (the largest value for an integer, both negative and positive), negative numbers, positive numbers, and zero.
+  ***Partition One*** was the design strategy used for the methods found in *Range* utilized equivalence class and boundary value testing to determine the test cases to be used. The only required parameters were the values x and y, where x is always less than or equal to y, and y is greater than or equal to x. Due to this, the range was partitioned into a minimum and maximum value (the largest value for an integer, both negative and positive), negative numbers, positive numbers, and zero.
 
-Text...
-  
+
+*Data Utilities* had multiple test strategies created for the methods found within. ***Partition Two***, used for calculating row and column totals was created using equivalence class and boundary value testing, and used mockery for their implementation. The range for this partition was split as negative numbers, positive numbers, the minimum and maximum value for an int, and was further split into amounts of columns/rows, and the position of the column/row itself.
+
+***Partition Three*** was written solely for the *getCumulativePercentages()* method, and again used equivalence class and boundary value testing. This method was partitioned into positive numbers and negative numbers, along with also partitioning based on the amount of rows within the table. 
+
+The final strategy, written for ***Partition Four*** used equivalence class and boundary value testing to generate test cases. This was split into positive numbers and negative numbers, the minimum and maximum values for an int, and also null values.
+
+
 
 # Test Cases Developed <a name="par2"></a>
 
-The three test cases using ***Partition One*** were *getUpperBound, getLowerBound,* and *getCentralValue*.  There is also one test case for each in which the inputs were invalid.
+The test cases developed using ***Partition One*** were for the methods *getUpperBound(), getLowerBound(), contains, getLength()* and *getCentralValue()*.  Some methods also include test cases in which inputs were invalid.
 
-**getUpperBound**
-
-| Test Method | Input A | Input B
-| ----------- | ----------- |  ----------- |
-|upperBoundOfNegativePositive()| Negative|Positive |
-|upperBoundOfNegativeNegative()|Negative|Negative|
-|upperBoundOfPositivePositive()|Positive|Positive|
-|upperBoundOfTheSameNumber()|Equals B|Equals A|
-|upperBoundOfPositiveMax()|Biggest Int|Biggest Int|
-|upperBoundOfNegativeMax()|Smallest Int|Smallest Int|
-|upperBoundOfNegMaxAndPositive()|Smallest Int|Positive|
-|upperBoundOfNegMaxAndNegative()|Smallest Int|Negative|
-|upperBoundOfNegMaxAndZero()|Smallest Int|Zero|
-|upperBoundOfPosMaxAndPositive()|Positive|Biggest Int|
-|upperBoundOfPosMaxAndNegative()|Negative|Biggest Int|
-|upperBoundOfPosMaxAndZero()|Zero|Biggest Int|
-|upperBoundOfInvalidInputs()|Greater Than A|Less Than B|
-
-**getLowerBound**
-
-| Test Method | Input A | Input B
+**RangeGetUpperBound**
+| Test Method | Inputs| Expected Output |
 | ----------- | ----------- | ----------- |
-|lowerBoundOfNegativePositive()| Negative|Positive |
-|lowerBoundOfNegativeNegative()|Negative|Negative|
-|lowerBoundOfPositivePositive()|Positive|Positive|
-|lowerBoundOfTheSameNumber()|Equals B|Equals A|
-|lowerBoundOfPositiveMax()|Biggest Int|Biggest Int|
-|lowerBoundOfNegativeMax()|Smallest Int|Smallest Int|
-|lowerBoundOfNegMaxAndPositive()|Smallest Int|Positive|
-|lowerBoundOfNegMaxAndNegative()|Smallest Int|Negative|
-|lowerBoundOfNegMaxAndZero()|Smallest Int|Zero|
-|lowerBoundOfPosMaxAndPositive()|Positive|Biggest Int|
-|lowerBoundOfPosMaxAndNegative()|Negative|Biggest Int|
-|lowerBoundOfPosMaxAndZero()|Zero|Biggest Int|
-|lowerBoundOfInvalidInputs()|Greater Than A|Less Than B|
+|upperBoundOfNegativePositive()| Negative and Positive | Positive |
+|upperBoundOfNegativeNegative()|Negative and Negative| Larger Negative |
+|upperBoundOfPositivePositive()|Positive and Positive| Larger Positive |
+|upperBoundOfTheSameNumber()|Same Input| Input Value |
+|upperBoundOfPositiveMax()|Biggest Int and Biggest Int| 2147483647 |
+|upperBoundOfNegativeMax()|Smallest Int and Smallest Int| -2147483647 |
+|upperBoundOfNegMaxAndPositive()|Smallest Int and Positive| Positive |
+|upperBoundOfNegMaxAndNegative()|Smallest Int and Negative| Negative|
+|upperBoundOfNegMaxAndZero()|Smallest Int and Zero|Zero|
+|upperBoundOfPosMaxAndPositive()|Positive and Biggest Int|2147483647|
+|upperBoundOfPosMaxAndNegative()|Negative and Biggest Int|2147483647|
+|upperBoundOfPosMaxAndZero()|Zero and Biggest Int|2147483647|
+|upperBoundOfInvalidInputs()|Greater Than A and Less Than B|Throws Exception|
 
-**getCentralValue**
+**RangeGetLowerBound**
+| Test Method | Inputs | Expected Output |
+| ----------- | ----------- | ----------- |
+|lowerBoundOfNegativePositive()| Negative and Positive | Negative |
+|lowerBoundOfNegativeNegative()|Negative and Negative| Smaller Negative|
+|lowerBoundOfPositivePositive()|Positive and Positive|Smaller Positive|
+|lowerBoundOfTheSameNumber()|Same Number |Input value|
+|lowerBoundOfPositiveMax()|Biggest Int and Biggest Int|2147483647|
+|lowerBoundOfNegativeMax()|Smallest Int and Smallest Int|-2147483647|
+|lowerBoundOfNegMaxAndPositive()|Smallest Int and Positive|-2147483647|
+|lowerBoundOfNegMaxAndNegative()|Smallest Int and Negative|-2147483647|
+|lowerBoundOfNegMaxAndZero()|Smallest Int and Zero|-2147483647|
+|lowerBoundOfPosMaxAndPositive()|Positive and Biggest Int|Positive|
+|lowerBoundOfPosMaxAndNegative()|Negative and Biggest Int|Negative|
+|lowerBoundOfPosMaxAndZero()|Zero and Biggest Int|Zero|
+|lowerBoundOfInvalidInputs()|Greater Than A and Less Than B|Throws Exception|
 
-| Test Method | Input A | Input B
-| ----------- | ----------- |  ----------- |
-|centralValueOfNegativePositive()| Negative|Positive |
-|centralValueOfNegativeNegative()|Negative|Negative|
-|centralValueOfPositivePositive()|Positive|Positive|
-|centralValueOfTheSameNumber()|Equals B|Equals A|
-|centralValueOfPositiveMax()|Biggest Int|Biggest Int|
-|centralValueOfNegativeMax()|Smallest Int|Smallest Int|
-|centralValueOfNegMaxAndPositive()|Smallest Int|Positive|
-|centralValueOfNegMaxAndNegative()|Smallest Int|Negative|
-|centralValueOfNegMaxAndZero()|Smallest Int|Zero|
-|centralValueOfPosMaxAndPositive()|Positive|Biggest Int|
-|centralValueOfPosMaxAndNegative()|Negative|Biggest Int|
-|centralValueOfPosMaxAndZero()|Zero|Biggest Int|
-|centralValueOfInvalidInputs()|Greater Than A|Less Than B|
+**RangeContains**
+| Test Method | Inputs| Expected Output |
+| ----------- | ----------- | ----------- |
+|postomoax_containsmax()|Positve and Biggest Int Range, Biggest Int arg | True|
+negtopos_containszero()|Negative and Positive Range, Zero arg| True|
+Negtomin_containsmin()| Smallest Int and Negative Range, Smallest Int arg| True|  
+postopos_notcontainsneg()|Two Positive Range, Negative arg| False|
+
+**RangeGetLength**
+| Test Method | Inputs | Expected Output |
+| ----------- | ----------- | ----------- |
+|getlength_minrange()|Smallest Int and Zero| 2147483647|
+|getlength_maxrange()|Zero and Biggest Int| 2147483647|
+|getlength_zero()|Zero and Zero| Zero|
+|getlength_negtopos()|Negative and Positive|Positive Minus Negative|
+**RangeGetCentralValue**
+| Test Method | Inputs| Expected Output |
+| ----------- | ----------- | ----------- |
+|centralValueOfNegativePositive()| Negative and Positive | Mean of Inputs |
+|centralValueOfNegativeNegative()|Negative and Negative| Mean of Inputs |
+|centralValueOfPositivePositive()|Positive and Positive| Mean of Inputs |
+|centralValueOfTheSameNumber()|Same Number| Input Number|
+|centralValueOfPositiveMax()|Biggest Int and Biggest Int|2147483647|
+|centralValueOfNegativeMax()|Smallest Int and Smallest Int| -2147483647|
+|centralValueOfNegMaxAndPositive()|Smallest Int and Positive| Mean of Inputs|
+|centralValueOfNegMaxAndNegative()|Smallest Int and Negative| Mean of Inputs|
+|centralValueOfNegMaxAndZero()|Smallest Int and Zero| Mean of Inputs|
+|centralValueOfPosMaxAndPositive()|Positive and Biggest Int|Mean of Inputs|
+|centralValueOfPosMaxAndNegative()|Negative and Biggest Int|Mean of Inputs|
+|centralValueOfPosMaxAndZero()|Zero and Biggest Int| Mean of Inputs |
+|centralValueOfInvalidInputs()|Greater Than A and Less Than B| Throws Exception |
+
+The test cases developed using ***Partition Two*** were for the methods calculateColumnTotal()*, and *calculateRowTotal().* *calculateRowTotal()* also included non-mockery tests written for it, just to check the accuracy of the mocks.
+
+**DataUtilitiesCalculateRowTotal**
+| Test Method | Inputs| Expected Output |
+| ----------- | ----------- | ----------- |
+|fourcolumn_calculateRowTotal()|Mock 2D Array with 4 Columns| Sum of Row 1|
+|onecolumn_calculateRowTotal()|Mock 2D Array with 1 Column| Som of row 1|
+
+**DataUtilitiesCalculateColumnTotal**
+| Test Method | Inputs| Expected Output |
+| ----------- | ----------- | ----------- |
+|givenZeroRowsTable_whenCalculateColumnTotal_thenReturnZero()|2D Array with 0 rows|Zero|
+|givenPositiveValuedRowsTable_whenCalculateColumnTotal_thenReturnPositive()|2D Array with Positive Values| Positive|
+|givenPositiveValuedRowsTableButNegativeIndex_whenCalculateColumnTotal_thenReturnZero()| 2D Array with Positive Values, Negative Index| Zero|
+|givenPositiveValuedRowsTableButWrongIndex_whenCalculateColumnTotal_thenReturnZero()| 2D Array with Positive Values, Incorrect Index|Zero|
+|givenPositiveValuedRowsTable_whenCalculateColumnTotalForEdgeColumn_thenReturnPositive()| 2D Array with Positive Values, Edge Column| Positive|
+|givenMockTable_calculateColumnTotalForThreePositiveValues()|Mock 2D Array of 3 Positive Rows| Sum of Column|
+|givenMockTable_calculateColumnTotalForThreeNegativeValues()|Mock 2D Array of 3 Negative Rows| Sum of Column|
+|givenMockTable_calculateColumnTotalForNoValues()|Mock 2D Array of 0 Rows| Zero|
+|givenMockTable_calculateColumnTotalForNegativeIndex()| Mock 2D Array of Negative Index| Zero|
+|givenMockTable_calculateColumnTotalForOutOfBoundsIndex()| Mock 2D Array of Invalid Index| Zero|
+|givenMockTable_calculateColumnTotalForEdgeColumn()| Mock 2D Array| Sum of Edge Column|
+|givenMockTable_calculateColumnTotalForLargeValues()|Mock 2D Array of Large Value Rows|Sum of Column|
+
+This test case is developed using ***Partition Three*** and covers the *getCumulativePercentages* method in *DataUtilities*. This test case uses mocking.
+
+**DataUtilitiesCalculateCumulativePercentages**
+| Test Method | Inputs| Expected Output |
+| ----------- | ----------- | ----------- |
+|givenMockTable_getCumulativePercentagesForThreePositiveValues()|Mock Table of 3 Positive Values|Cumulative Percent of Values|
+|givenSingleRowTable_getCumulativePercentages()|Mock Table of 1 Row|1.0|
+|givenThreeRowsTable_getCumulativePercentages()|Mock Table of 3 Positive Rows|Cumulative Percent of Row|
+|givenThreeEmptyRowsTable_getCumulativePercentages()|Mock Table of 3 Empty Rows|NaN|
+|givenThreeNegativeRowsTable_getCumulativePercentages()|Mock Table of 3 Negative Rows|Cumulative Percent of Row|
 
 
-// write down the name of the test methods and classes. Organize the based on
+The final two test cases were developed using ***Partition Four***, and covers *createNumberArray()*, and *createNumberArray2D()* from *DataUtilities*.
 
-the source code method // they test. identify which tests cover which partitions
+**DataUtilitiesCreateNumberArray**
+| Test Method | Inputs| Expected Output |
+| ----------- | ----------- | ----------- |
+|createNumberArrayTestNull()|Null|Throws Exception|
+|testcreateNumberArray()|Set of Numbers|Array of Input|
+|testcreateNumberArrayIndex()|Set of Numbers| Array of Input|
+|testArrayLength()|Array|Length of Array|
 
-you have explained in the test strategy section //above
+**DataUtilitiesCreateNumberArray2D**
+| Test Method | Inputs| Expected Output |
+| ----------- | ----------- | ----------- |
+|createNumberArrayTestNull()|Null|Throws Exception|
+|testcreateNumberArray2D()|Set of Numbers|2D Array of Input|
+|testcreateNumberArrayIndex()|Set of Numbers| 2D Array of Input|
+|testArrayLength()| 2D Array|Amount of Rows|
+|testArrayRowLength()| 2D Array|Length of Rows|
 
-  
+
+
 
 # How the Team Work/Effort Was Divided and Managed <a name="par3"></a>
 
-  In order to divide the work within this lab, we  split the 10 methods to be tested evenly between the four of us, with two members testing 2 methods each, and the other two members testing 3 methods each. We all decided to create our own partitions for our respective methods, then after we had all created the partitions we compared and adjusted based on each others input. Finally after we all made our own test cases, we once again shared and checked each others test cases.
-
-  
+ In order to divide the work within this lab, we split the 10 methods to be tested evenly between the four of us, with two members testing 2 methods each, and the other two members testing 3 methods each. We all decided to create our own partitions for our respective methods. After we had all created the partitions we compared and adjusted based on each other's input to lower the total amount of partitions needed. Finally, after we all made our own test cases, we again shared and checked each other's test cases.
 
 # Difficulties Encountered, Challenges Overcome, and Lessons Learned <a name="par4"></a>
 
-  
+One of the major difficulties that we encountered was the initial concept of mocking. We struggled initially with deciding how to create the mocks, as they were more complex than the tests we needed to design for all of the *Range* methods. The other main challenge we encountered was having our tests that are expected to fail not to have any errors, and only report a failure instead.
 
-Text…
+When looking back on mocking during a test case, it has many advantages and disadvantages when being used. Some advantages of mocking is that they are both fast and stable across systems. Without needing to use outside services the test will always be run the same way every time. Isolation is also a large benefit of mocking, as you can isolate if the reasoning behind a failure is a dependency. The biggest issue with a mock is that they are not actually equivalent to the integration that they are mocking. Because of this, you are cannot be certain that the test will work. They also may create false-negatives if set up inaccurately.
+
+Through this lab, the largest lesson that we learned was the ability to create our own test cases through the use of the black box strategy. This made us need to think about what the best partition will be, and how to change those to fit the methods we needed to test.
 
   
 
 # Comments/Feedback on the Lab Itself <a name="par5"></a>
 
-  
-
-Text
+Overall, we found the lab very useful in helping improve both our ability to create test cases from scratch using black box methods, and our ability to create test cases within JUnit. The lab report outline given to us provided us with the necessary structure to ensure that we did not miss any steps during the planning stage, and allowed us to keep consistent between members. As this was most of our group member’s first time using JUnit, this lab taught us a useful skill that will surely assist us as we continue our degrees.
