--- a/seng438-a2-10.md
+++ b/seng438-a2-10.md
@@ -27,9 +27,9 @@
   
 # Introduction <a name="introduction"></a>
 
-  In this lab session our team managed to develop our own test cases using black box strategies, then used JUnit to perform the test cases themselves.
+In this lab session, our team developed our own automated unit tests using a variety of black box strategies. We wrote the test cases using the Java-based tool JUnit and the mocking framework jMock. The System Under Test is a version of JFreeChart framework that has been modified for the purposes of this lab. We based our unit tests on the Javadoc provided with this lab session.
 
-Prior to this lab session, we had very little practical experience with creating our own test cases, and we also had little JUnit experience and more specifically mocking a test case. We overall understood the concepts involved with black box testing such as equivalence class and boundary value testing which helped us develop our test cases. 
+Prior to this lab session, we had very little practical experience with creating our own test cases using JUnit. In addition, we did not have any experience mocking a test case. Overall, this lab has helped us understand the concepts involved with black box testing such as equivalence class and boundary value testing.
 
   
 
@@ -44,7 +44,7 @@ To begin our design process When designing test cases each of the four members c
 
 ***Partition Three*** was written solely for the *getCumulativePercentages()* method, and again used equivalence class and boundary value testing. This method was partitioned into positive numbers and negative numbers, along with also partitioning based on the amount of rows within the table. 
 
-The final strategy, written for ***Partition Four*** used equivalence class and boundary value testing to generate test cases. This was split into positive numbers and negative numbers, the minimum and maximum values for an int, and also null values.
+The final strategy, written for ***Partition Four*** used equivalence class and boundary value testing to generate test cases. This was split into testing the creation of arrays, out of bounds arrays, and the lengths of arrays.
 
 
 
@@ -90,9 +90,9 @@ The test cases developed using ***Partition One*** were for the methods *getUppe
 | Test Method | Inputs| Expected Output |
 | ----------- | ----------- | ----------- |
 |postomoax_containsmax()|Positve and Biggest Int Range, Biggest Int arg | True|
-negtopos_containszero()|Negative and Positive Range, Zero arg| True|
-Negtomin_containsmin()| Smallest Int and Negative Range, Smallest Int arg| True|  
-postopos_notcontainsneg()|Two Positive Range, Negative arg| False|
+|negtopos_containszero()|Negative and Positive Range, Zero arg| True|
+|negtomin_containsmin()| Smallest Int and Negative Range, Smallest Int arg| True|  
+|postopos_notcontainsneg()|Two Positive Range, Negative arg| False|
 
 **RangeGetLength**
 | Test Method | Inputs | Expected Output |
@@ -101,6 +101,7 @@ postopos_notcontainsneg()|Two Positive Range, Negative arg| False|
 |getlength_maxrange()|Zero and Biggest Int| 2147483647|
 |getlength_zero()|Zero and Zero| Zero|
 |getlength_negtopos()|Negative and Positive|Positive Minus Negative|
+
 **RangeGetCentralValue**
 | Test Method | Inputs| Expected Output |
 | ----------- | ----------- | ----------- |
@@ -124,7 +125,7 @@ The test cases developed using ***Partition Two*** were for the methods calculat
 | Test Method | Inputs| Expected Output |
 | ----------- | ----------- | ----------- |
 |fourcolumn_calculateRowTotal()|Mock 2D Array with 4 Columns| Sum of Row 1|
-|onecolumn_calculateRowTotal()|Mock 2D Array with 1 Column| Som of row 1|
+|onecolumn_calculateRowTotal()|Mock 2D Array with 1 Column| Sum of row 1|
 
 **DataUtilitiesCalculateColumnTotal**
 | Test Method | Inputs| Expected Output |
@@ -184,12 +185,16 @@ The final two test cases were developed using ***Partition Four***, and covers *
 
 One of the major difficulties that we encountered was the initial concept of mocking. We struggled initially with deciding how to create the mocks, as they were more complex than the tests we needed to design for all of the *Range* methods. The other main challenge we encountered was having our tests that are expected to fail not to have any errors, and only report a failure instead.
 
-When looking back on mocking during a test case, it has many advantages and disadvantages when being used. Some advantages of mocking is that they are both fast and stable across systems. Without needing to use outside services the test will always be run the same way every time. Isolation is also a large benefit of mocking, as you can isolate if the reasoning behind a failure is a dependency. The biggest issue with a mock is that they are not actually equivalent to the integration that they are mocking. Because of this, you are cannot be certain that the test will work. They also may create false-negatives if set up inaccurately.
+When looking back on mocking during a test case, it has many advantages and disadvantages when being used. 
+
+Some advantages of mocking is that they are both fast and stable across systems. Without needing to use external services, the test will always be run the same way and consistency is ensured. Isolation is also a large benefit of mocking, as you can isolate whether the reason behind a failure is due to a dependency. 
+
+The biggest issue with a mock is that we are unable to test the integration between the method we are testing and the component that is mocked. Due to this limitation, we cannot be certain that the method being tested will work. They also may create false-negatives if set up inaccurately.
 
 Through this lab, the largest lesson that we learned was the ability to create our own test cases through the use of the black box strategy. This made us need to think about what the best partition will be, and how to change those to fit the methods we needed to test.
 
-  
+ 
 
 # Comments/Feedback on the Lab Itself <a name="par5"></a>
 
-Overall, we found the lab very useful in helping improve both our ability to create test cases from scratch using black box methods, and our ability to create test cases within JUnit. The lab report outline given to us provided us with the necessary structure to ensure that we did not miss any steps during the planning stage, and allowed us to keep consistent between members. As this was most of our group member’s first time using JUnit, this lab taught us a useful skill that will surely assist us as we continue our degrees.
+Overall, we found the lab very useful in helping improve our ability to plan test cases from scratch using black box methods, and our ability to create test cases within JUnit. The lab report outline given to us provided us with the necessary structure to ensure that we did not miss any steps during the planning stage, and allowed us to keep consistent between members. As this was most of our group member’s first time using JUnit, this lab taught us a useful skill that will surely assist us as we continue our degrees.
